# syntheticdata-catalog-demo

./: .gitignore  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  auth.py  datasets.py  proposals.py
app/catalog/: catalog_generator.py  pii_detector.py  stats_calculator.py  type_inferrer.py
app/cli/: __init__.py
app/cli/commands/: catalog.py  dataset.py  demo.py  execution.py  proposal.py  submission.py  synthetic.py  users.py
app/db/: __init__.py  models.py  session.py
app/execution/: output_validator.py  package_validator.py  runner.py
app/schemas/: dto.py
app/services/: audit_service.py  auth_service.py  catalog_service.py  data_request_service.py  dataset_service.py  execution_service.py  profiling_service.py  proposal_service.py  result_service.py  submission_service.py  synthetic_service.py
app/storage/: file_store.py
app/synthetic/: __init__.py  generator.py  quality_report.py
app/utils/: csv_utils.py  ids.py
app/web/routers/: auth.py  hr.py  proposer.py
app/web/templates/: base.html  dashboard.html  data_requests.html  login.html
docs/: spec.md
examples/sample_data/: employee_master.csv  project_allocation.csv  working_hours.csv
examples/submissions/submission_bad/: main.py
examples/submissions/submission_ok/: main.py  manifest.json
tests/: conftest.py
tests/integration/: test_api.py  test_cli.py
tests/unit/: test_catalog.py  test_cli_catalog.py  test_cli_proposal.py  test_phase06.py  test_phase08.py  test_proposal.py  test_quality_report.py  test_services.py
(+20 files in other folders)
